Small corrections to responsiviness, overflow-x

--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,6 @@
 * {
     margin: 0;
     padding: 0;
-    /*border: 1px solid black;*/
 }
 
 html {
@@ -41,6 +40,7 @@ nav {
     height: 64px;
     display: flex;
     justify-content: space-between;
+    overflow: hidden;
 }
 
 .logo {
@@ -64,7 +64,6 @@ nav {
 }
 
 .nav {
-    width: 500px;
     min-width: 500px;
     height: 64px;
     flex-shrink: 2;
@@ -168,6 +167,7 @@ main {
     display: flex;
     margin-bottom: 24px;
     border: 1px solid lightgray;
+    margin-right: 10px;
 }
 
 .card img {
@@ -393,6 +393,10 @@ footer {
 }
 
 @media only screen and (max-width: 750px) {
+    body {
+        overflow-x: hidden;
+    }
+
     nav, .logo {
         width: 100%;
         height: 64px;
